--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ yarn-error.log*
 firebase-debug.log*
 firebase-debug.*.log*
 
+# Compiled JavaScript files
+lib/**/*.js
+lib/**/*.js.map
+
 # Firebase cache
 .firebase/
 
