--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functions",
   "scripts": {
-    "build": "tsc --build --clean",
+    "build": "tsc --build",
     "deploy": "firebase deploy --only functions",
     "start": "npm run build && firebase emulators:start --inspect-functions",
     "test": "jest --verbose=true"
@@ -11,16 +11,16 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^9.2.0",
+    "firebase-admin": "^9.11.1",
     "firebase-backend": "^0.2.2",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.15.4"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
-    "firebase-functions-test": "^0.2.0",
+    "firebase-functions-test": "^0.3.2",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.5",
-    "typescript": "^3.8.0"
+    "typescript": "^4.3.5"
   },
   "private": true
 }
